...
                .font(.headline)
                .foregroundStyle(.secondary)
            Picker("Direction", selection: $userData.trailDirection) {
                Text("Forward")
                    .accessibilityLabel("Forward direction")
                    .tag(Direction.Clockwise)
                Text("Reverse")
                    .accessibilityLabel("Reverse direction")
                    .tag(Direction.CounterClockwise)
            }
            .pickerStyle(.segmented)
        }
    }
...
