...
               self.showMap.toggle()
               if self.showMap {
                   UIApplication.shared.endEditing(true)
               }
               
            }) {
               Text(self.showMap ? "Search": "Cancel")
            }.padding(.trailing)
        )
    }
}

struct MainMapContainerView_Previews: PreviewProvider {
...
